--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.10",
-    '@vue/composition-api': "^1.0.0-rc.6",
+    "@vue/composition-api": "^1.0.0-rc.6",
     "nuxt": "^2.13.0",
     "swiper": "^6.5.6",
     "vue-awesome-swiper": "^4.1.1"
