--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "start": "nuxt-ts start",
     "export": "nuxt-ts export",
-    "serve": "nuxt-ts serve"
+    "serve": "nuxt-ts serve",
+    "deploy": "yarn generate && firebase deploy --only hosting:mock-library"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.10",
